fix spacing

--- a/src/components/Form/styles/AuthForm.scss
+++ b/src/components/Form/styles/AuthForm.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   grid-gap: 18px;
+  margin-top: 28px;
   
   &-label {
     color: #1E1F20;
